--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,6 @@
     <title>My Webpage</title>
   </head>
   <body>
-    Hello world!hello again! Hello a third time!Hello all people!
-    Here is feature! 
+  Anotehr new branch contens
   </body>
 </html>
